--- a/web/index.html
+++ b/web/index.html
@@ -29,9 +29,9 @@
             </div>
 
             <div class="actions">
-                <button id="btnAsk" type="button" onclick="run()">Ask</button>
-                <button id="btnAskStream" type="button" onclick="runstream()">Ask (stream)</button>
-                <button id="btnDescribeImage" type="button" onclick="describeImage()">Describe image</button>
+                <button id="btnAsk" class="btn btn-secondary" type="button" onclick="run()">Ask</button>
+                <button id="btnAskStream" class="btn btn-primary" type="button" onclick="runstream()">Ask (stream)</button>
+                <button id="btnDescribeImage" class="btn btn-secondary" type="button" onclick="describeImage()">Describe image</button>
 
                 <div id="status" class="status" aria-live="polite">
                     <span id="spinner" class="spinner" aria-hidden="true"></span>
