updated image-to-text workload

--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,7 @@
                 <button id="btnAsk" class="btn btn-secondary" type="button" onclick="run()">Ask</button>
                 <button id="btnAskStream" class="btn btn-primary" type="button" onclick="runstream()">Ask (stream)</button>
                 <button id="btnDescribeImage" class="btn btn-secondary" type="button" onclick="describeImage()">Describe image</button>
+                <button id="btnDescribeImagesBatch" class="btn btn-secondary" type="button" onclick="describeImagesBatch()">Describe images (batch)</button>
 
                 <div id="status" class="status" aria-live="polite">
                     <span id="spinner" class="spinner" aria-hidden="true"></span>
